refactor: LottoTicket 생성을 domain에서 하도록 변경